[tool.poetry]
name = "lnurl"
version = "0.4.1"
description = "LNURL implementation for Python."
authors = ["Alan Bits <alan@lnbits.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "lnurl"},
  {include = "lnurl/py.typed"},
]

[tool.poetry.scripts]
lnurl = "lnurl.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pydantic = "^1"
bech32 = "^1.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.2"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
files = "lnurl"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
