[tool.poetry]
name = "lnurl"
version = "0.6.6"
description = "LNURL implementation for Python."
authors = ["Alan Bits <alan@lnbits.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "lnurl"},
  {include = "lnurl/py.typed"},
]

[tool.poetry.scripts]
lnurl = "lnurl.cli:main"

[tool.poetry.dependencies]
python = ">=3.10"
pydantic = "^1"
bech32 = "*"
ecdsa = "*"
bolt11 = "*"
httpx = "*"
pycryptodomex = "^3.21.0"
bip32 = "^4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
types-requests = "^2.31.0.2"
mypy = "^1.5.1"
ruff = "^0.12.3"
pre-commit = "^3.3.3"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "True"
files = "lnurl"

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.black]
line-length = 120
preview = true

[tool.ruff]
# Same as Black. but black has a 10% overflow rule
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# (`I`) means isorting
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
