[project]
name = "lnurl"
version = "0.9.0"
requires-python = ">=3.10,<3.13"
description = "LNURL implementation for Python."
authors = [{ name = "Alan Bits", email = "alan@lnbits.com" }]
urls = { Repository = "https://github.com/lnbits/lnurl" }
readme = "README.md"
license = "MIT"
dependencies = [
  "pydantic>=1.10.0,<2.0.0",
  "pycryptodomex>=3.21.0",
  "bip32>=5.0.0",
  "bech32",
  "bolt11",
  "httpx",
  "coincurve>=20.0.0",
]

[dependency-groups]
dev = [
  "black>=24.3.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "types-requests",
  "mypy>=1.17.1",
  "ruff>=0.12.3",
  "pre-commit>=3.3.3",
  "pytest-asyncio>=0.23.6",
]

[project.scripts]
lnurl = "lnurl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lnurl"]

[tool.mypy]
ignore_missing_imports = "True"
files = "lnurl"
plugins = "pydantic.mypy"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = [
  "tests"
]

[tool.black]
line-length = 120
preview = true

[tool.ruff]
# Same as Black. but black has a 10% overflow rule
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
# (`I`) means isorting
select = ["E", "F", "I"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
